--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,11 @@ repositories {
             includeGroup "curse.maven"
         }
     }
-
+    maven {
+        // location of the maven that hosts JEI files
+        name = "Progwml6 maven"
+        url = "https://dvs1.progwml6.com/files/maven/"
+    }
     // If you have mod jar dependencies in ./libs, you can declare them as a repository like so:
     // flatDir {
     //     dir 'libs'
@@ -136,11 +140,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : "autosmelt",
-                "Specification-Vendor"    : "onVoid",
+                "Specification-Vendor"    : "brdle",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : "${mod_version}",
-                "Implementation-Vendor"   : "onVoid",
+                "Implementation-Vendor"   : "brdle",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
